2000-05-09  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (IS_INF):  The new test is x == x + 1.  The old test
	x == x/2 did not work for zero values.  Thanks to Han-Wen Nienhuys
	and Ivan Toshkov.

	(scm_number_to_string, scm_sum, scm_difference, scm_two_doubles,
	scm_num2long, scm_num2long_long, scm_num2ulong):  Reordered
	dispatch sequence.

2000-05-09  Marius Vollmer  <mvo@zagadka.ping.de>

	* scmsigs.c (take_signal): Execute SCM_ASYNC_TICK for SIGSEGV,
	SIGILL and SIGBUS signals.  These signals are not continuable and
	must be handled for real right away.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_zero_p, scm_positive_p, scm_negative_p,
	scm_real_part, scm_imag_part, scm_magnitude,
	scm_inexact_to_exact):  Reordered dispatch sequence.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* feature.c:  No need to include "libguile/smob.h"

	(scm_loc_features, features, scm_add_feature, scm_init_feature):
	Removed variable 'scm_loc_features' as a pointer to the SCM value
	holding the features list.  Using variable 'features' instead,
	which holds the interned pair.  Thus, SCM_SETCDR can be used
	instead of pointer trickery.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* alist.c (scm_acons):  Use SCM{_SET}?_CELL_OBJECT as long as a
	cell is not known to be a valid pair.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (ASRTSYNTAX, scm_m_body, scm_m_letrec1):  Removed
	ASRTSYNTAX.  Using SCM_ASSYNT instead.

	(scm_m_body):  Don't create a redundant cons cell.

	(scm_m_do):  Removed redundant test 'bodycheck'.

	(bodycheck):  Removed.

	* stacks.c (stack_depth, read_frame, read_frames):  Removed
	redundant calculation of size, minimized some variable scopes.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.c (scm_cons, scm_cons2):  Use SCM{_SET}?_CELL_OBJECT as
	long as a cell is not known to be a valid pair.

	(scm_pair_p):  Eliminated redundant SCM_IMP test.
